--- a/Nowa oferta.mdx
+++ b/Nowa oferta.mdx
@@ -2,382 +2,317 @@
 title: "Nowa oferta"
 ---
 
-Oferta przeglądOferta przegląd
+# Nowa oferta
 
 <Frame>
   <img
     src="/images/Oferty.png"
-    alt="Zrzut ekranu z interfejsu: Oferta ze zlecenia"
+    alt="Zrzut ekranu z interfejsu: Nowa oferta"
     style={{ borderRadius:"0.5rem" }}
-    title="s"
   />
 </Frame>
 
-To jest interfejs typu "Record review". Po lewej stronie ekranu wyświetlana jest lista rekordów. Szczegóły danego rekordu (razem z przyciskami mogącymi na niego wpłynąć), wyświetlane są na prawo od listy.
+---
 
-Ten interfejs jest "wglądem" w arkusz ofert. To znaczy że wszystkie zmiany tutaj wprowadzone, są wprowadzane w rekordzie w bazie danych.
+## Spis treści
 
-## Lista rekordów
+1. [Opis interfejsu](#opis-interfejsu)
+2. [Lista rekordów](#lista-rekordow)
+   - [Właściwości listy](#wlasciwosci-listy)
+   - [Podsumowanie rekordu](#podsumowanie-rekordu)
+3. [Dodawanie nowej oferty](#dodawanie-nowej-oferty)
+4. [Edycja nowej oferty – wspólne pola](#edycja-nowej-oferty)
+5. [Pola specyficzne dla typów ofert](#pola-specyficzne)
+6. [Generowanie PDF](#generowanie-pdf)
+7. [Wypełnianie rekordu zleceń serwisowych](#wypelnianie-zlecen)
+8. [Dodawanie urządzenia przy ofercie naprawy](#dodawanie-urzadzenia)
+9. [Wysyłanie danych do Memento](#wysylanie-memento)
 
-### Właściwości listy
+---
+
+## <a id="opis-interfejsu"></a> Opis interfejsu
+
+To jest interfejs typu **Record review**.  
+Po lewej stronie ekranu widoczna jest **lista rekordów**, a po prawej **szczegóły danego rekordu** z przyciskami akcji.
+
+Ten interfejs stanowi *wgląd* w arkusz **Oferty** – każda zmiana tutaj wprowadzona modyfikuje rekord w bazie danych.
+
+---
+
+## <a id="lista-rekordow"></a> Lista rekordów
+
+### <a id="wlasciwosci-listy"></a> Właściwości listy
 
 <Frame>
   <img
-    src="\images\Oferty-filtry.png"
-    alt="Zrzut ekranu z interfejsu: Oferta- właściwości listy"
+    src="/images/Oferty-filtry.png"
+    alt="Zrzut ekranu z interfejsu: Oferta – właściwości listy"
     style={{ borderRadius:"0.5rem" }}
   />
 </Frame>
 
-W prawym górnym rogu widzimy przyciski.
+W prawym górnym rogu widzimy przyciski:
 
-- Z symbolem plusa, służy do [utworzenia nowej oferty]().
-- Z kwadratem i strzałką, otwieta w nowym oknie stronę [oferta ze zlecenia](Oferta%20ze%20zlecenia).
-- 3 kropki, pokazują dodatkowe opcje tj. wydrukowanie rekordu.
+- ➕ **Plus** – do [utworzenia nowej oferty](#dodawanie-nowej-oferty)  
+- ⬜➡️ **Kwadrat ze strzałką** – otwiera stronę [Oferta ze zlecenia](/Oferta%20ze%20zlecenia)  
+- ⋯ **Trzy kropki** – dodatkowe opcje, np. wydrukowanie rekordu
 
-Poniżej dużych przycisków widzimy mniejsze, odpowiedzialne za właściwości listy rekordów.
+Poniżej znajdują się mniejsze przyciski sterujące właściwościami listy:
 
-- Po lewej "group", pozwala na grupowanie rekordów
-- Po środku "filter", pozwala na filtrowanie rekordów według dowolnych pól w arkuszu
-- Po prawej "sort", pozwala na wybór sortowania listy, domyślnie wg. daty utworzenia
+- **Group** – grupowanie rekordów  
+- **Filter** – filtrowanie rekordów wg dowolnych pól  
+- **Sort** – sortowanie listy (domyślnie wg daty utworzenia)
 
-Po lewej stronie, poniżej napisu "Oferty" możemy wybrać wzór filtrowania. Domyślnie pokazywane są wszystkie rekordy. Można również wybrać by pokazywane były wygenerowane/nie wygenerowane oferty.
+Po lewej stronie, pod napisem *Oferty*, można wybrać wzór filtrowania (np. tylko wygenerowane oferty).  
+Na dole widoczny jest **pasek wyszukiwania** – pozwala znaleźć rekord po dowolnym polu widocznym w [podsumowaniu rekordu](#podsumowanie-rekordu).
 
-Na samym dole jest pasek wyszukiwania. Możemy tam wyszukać rekord po dowolnej rzeczy obecnej  w [podsumowaniu rekordu](Podsumowanie%20rekordu) (numer oferty/typ/szpital).
+---
 
-### Podsumowanie rekordu
+### <a id="podsumowanie-rekordu"></a> Podsumowanie rekordu
 
 <Frame>
   <img
     src="/images/Oferty-podsumowanie.png"
-    alt="Zrzut ekranu z interfejsu: Oferta ze zlecenia"
+    alt="Zrzut ekranu z interfejsu: Podsumowanie rekordu"
     style={{ borderRadius:"0.5rem" }}
   />
 </Frame>
 
 #### Pasek i załącznik
 
-Po lewej stronie wyświetlany jest pasek statusu uzależniony od tego czy dana oferta jest w [trybie edycji](#edytuj).
+Po lewej stronie znajduje się **pasek statusu**, zależny od tego, czy oferta jest w [trybie edycji](#edytuj):
 
-- Ciemnoszary pasek- rekord w trybie edycji (jak widać na obrazku powyżej).
-- Jasnoszary pasek- rekord poza trybem edycji.
+- **Ciemnoszary pasek** – rekord *w trybie edycji*  
+- **Jasnoszary pasek** – rekord *poza trybem edycji*
 
-Po prawej od paska widoczne jest pole w którym wyświetlany jest plik oferty. Mógł on zostać wygenerowany lub wklejony ręcznie do rekordu.
+Po prawej stronie widoczne jest pole z **plikem oferty** (PDF), który mógł zostać wygenerowany lub wklejony ręcznie.
 
 <AccordionGroup>
   <Accordion title="Wnioskowanie ze statusu i pliku" icon="file-chart-column">
-    Jeżeli status wskazuje na to że rekord jest w trybie edycji i nie widać pliku, można wywnioskować że nie był on jeszcze wygenerowany.
+    Jeżeli rekord jest w trybie edycji i nie ma pliku — nie został jeszcze wygenerowany.  
+    Jeśli plik jest obecny, a rekord nie jest edytowany — oferta została wygenerowana i nie była modyfikowana.  
 
-    Przypadek gdy plik jest obecny a rekord nie jest w trybie edycji świadczy o tym że oferta została wygenerowana i od tego czasu nic w treści rekordu nie było zmieniane.
-
-    Warto natomiast zwrócić uwagę na rekordy w trybie edycji z załącznikiem.
-
-    Może to wskazywać na to że jakieś zmiany zostały wprowadzone w rekordzie już po wygenerowaniu pliku.
-
-    Warto wtedy sprawdzić czy aby napewno to co jest w wygenerowanym PDFie zgadza się z danymi w rekordzie.
-
-    Po sprawdzeniu poprawności, w takim rekordzie można wyłączyć tryb edycji, trzeba jednak pamiętać że bez względu na to czy były jakieś zmiany, wygenerowany zostanie nowy plik PDF na podstawie rekordu.
+    Rekordy w trybie edycji *z załącznikiem* mogą zawierać zmiany wprowadzone **po** wygenerowaniu pliku.  
+    W takim wypadku warto sprawdzić, czy dane w rekordzie i PDFie są spójne.  
+    Po weryfikacji można wyłączyć tryb edycji — zostanie wtedy wygenerowany nowy plik PDF.
   </Accordion>
 </AccordionGroup>
 
 #### Numer, typ, klient
 
-Na prawo od załącznika, widzimy 3 linijki.
+Na prawo od załącznika widzimy:
 
-- Pierwsza to [numer oferty]().
-- Druga zawiera [typ]() oferty.
-- Trzecia zawiera skrót [klienta]().
+- **Numer oferty**  
+- **Typ oferty**  
+- **Skrót klienta**
 
-## Dodawanie nowej oferty
+---
+
+## <a id="dodawanie-nowej-oferty"></a> Dodawanie nowej oferty
 
 <Frame>
   <img
     src="/images/Oferty-nowa.png"
-    alt="Zrzut ekranu, interfejs oferty, nowa oferta"
+    alt="Zrzut ekranu: Nowa oferta"
     style={{ borderRadius:"0.5rem" }}
   />
 </Frame>
 
-Po wciśnięciu przycisku z plusem (tego nad listą rekordów), otwiera się okno tworzenia nowej oferty. W tym oknie jedynie wybieramy typ (warunkujący [widoczność pól]() w szczegółach rekordu)
+Po wciśnięciu przycisku ➕ otwiera się okno **tworzenia nowej oferty**, w którym wybieramy typ (określający [widoczność pól](#edycja-nowej-oferty)).
 
-# Edycja nowej oferty- wspólne pola
+---
+
+## <a id="edycja-nowej-oferty"></a> Edycja nowej oferty – wspólne pola
 
 ![Zrzut ekranu 2025-10-09 105143.png](/images/Zrzutekranu2025-10-09105143.png)
 
 ### Typ
 
-Warunkuje widoczność odpowiednich dla siebie pól. Obecnie są 4 typy.
+Warunkuje widoczność odpowiednich pól. Dostępne typy:
 
-- Serwis- oferta na zlecenie serwisowe.
-- Przegląd- oferta na jeden lub więcej przeglądów.
-- Części- oferta na sprzedaż części.
-- Diagnostyka- oferta na diagnostykę urządzenia.
+- **Serwis**
+- **Przegląd**
+- **Części**
+- **Diagnostyka**
 
-### Data Wystawienia
+### Data wystawienia
 
-Ustawiana automatycznie na aktualną datę w momencie utworzenia oferty.
+Automatycznie ustawiana na aktualną datę.
 
-### Dni na akceptacje
+### Dni na akceptację
 
-Domyślnie ustawione na 30. Służy do obliczenia ważności oferty.
+Domyślnie **30 dni**, służy do obliczenia ważności oferty.
 
 ### Numer oferty sugerowany
 
-Pole typu "formula" mające na celu przechowywanie sugerowanego numeru oferty w sytuacji gdy numer został omyłkowo usunięty. Działą wg. wzoru O-[Lp](#Lp)-[miesiąc wystawienia](##data%20wystawienia)-[rok wystawienia](##data%20wystawienia).
+Pole `formula`, przechowujące awaryjny numer oferty wg wzoru  
+**O-[Lp](#lp)-[miesiąc wystawienia](#data-wystawienia)-[rok wystawienia](#data-wystawienia)**.
 
 ### Numer oferty
 
-Wyświetlany na samej górze ekranu. Po utworzeniu oferty, automatycznie nadawany przez automatyzacje wg. wzoru O-[Lp](#Lp)-[miesiąc wystawienia](##data%20wystawienia)-[rok wystawienia](##data%20wystawienia).
-
-Po automatycznym uzupełnieniu, być ręcznie edytowany.
+Wyświetlany u góry, nadawany automatycznie wg wzoru:  
+**O-[Lp](#lp)-[miesiąc](#data-wystawienia)-[rok](#data-wystawienia)**  
+Może być później ręcznie edytowany.
 
 ### Kontynuacja
 
-Służy do utworzenia oferty kontynuacyjnej. Za pomocą tego pola wybieramy ofertę poprzedzającą do aktualnej.
+Umożliwia utworzenie oferty **kontynuacyjnej**, powiązanej z poprzednią.
 
-Jeżeli poprzednia oferta nie jest obecna w bazie, możemy ją w w tym miejscu utworzyć
-
-<img
-  src="/images/Zrzutekranu2025-10-09093636.png"
-  alt="Zrzut ekranu 2025-10-09 093636.png"
-  title="Zrzut ekranu 2025-10-09 093636.png"
-  style={{ width:"46%" }}
-/>
+<img src="/images/Zrzutekranu2025-10-09093636.png" alt="Kontynuacja oferty" style={{ width:"46%" }}/>
 
 ### Ważność oferty
 
-Data do której klient ma czas na akceptacje tej oferty. Jest równa [dacie wystawienia](#data%20wystawienia) + [dni na akcepację](#dni%20na%20akceptacje).
+Data ważności = [data wystawienia](#data-wystawienia) + [dni na akceptację](#dni-na-akceptacje).
 
-### Lp
+### <a id="lp"></a> Lp
 
-Liczba pojedyńcza rekordu. Liczona od początku roku. Przy kreacji rekordu automat wyszukuje najwyższą liczbę Lp w tym roku i dodaje do niej 1.
+Liczba porządkowa rekordu w danym roku (automatycznie zwiększana o 1).
 
 ### Nr. Sprawy
 
-W przypadku typu "serwis"- wypełniany numerem zlecenia serwisowego.
+Wypełniany numerem zlecenia serwisowego (dla typu *Serwis*).
 
 ### Nr. zgłoszenia klienta
 
-Informacja o pochodzeniu oferty. W zależności od sytuacji może się tam znajdować:
-
-- "Po przeglądzie"-  jeżeli oferta jest na naprawę po przeglądzie.
-- Numer zgłoszenia klienta- jeżeli dostaniemy od klienta numer który przypisał tej sprawie.
-- "Mail" + data- jeżeli oferta jest odpowiedzią na mailowe zapytanie ofertowe.
+Źródło oferty:  
+- *Po przeglądzie*,  
+- *Numer zgłoszenia klienta*,  
+- *Mail + data* (odpowiedź na zapytanie mailowe).
 
 ### Szpital
 
-Tutaj wybieramy klienta danej oferty. Za pomocą tego pola łączymy ofertę z pozycją w arkuszu szpitali.
-
-Z tego miejsca nie można dodać nowej pozycji. By utworzyć rekord klienta należy skorzystać z interfejsu [Klienci]().
-
-Automatycznie wypełniane przy [ofercie ze zlecenia](/Oferta%20ze%20zlecenia).
+Wybór klienta oferty (rekord z arkusza *Szpitale*).  
+Automatycznie wypełniany przy [ofercie ze zlecenia](/Oferta%20ze%20zlecenia).
 
 ### Płatnik
 
-Jest to jednostka która płaci za ofertę. Pole, tak jak "Szpital", jest referencją do arkusza szpitali. Po wyborze szpitala jest ono automatycznie wypełniane wg. informacji o płatniku z bazy.
-
-Z uwagi na to że nie zawsze płatnik danego klienta będzie opłacał tą ofertę, to pole można ręcznie edytować. Jest to szczególnie przydatne w przypadku np. napraw gwarancyjnych gdize płatnikiem jest producent sprzętu.
-
-Z tego miejsca również nie można dodawać nowych rekordów.
+Jednostka płacąca. Domyślnie wypełniana automatycznie, ale można ją zmienić.
 
 ### Termin płatności
 
-Automatycznie wypełniany informacjami z bazy dotyczących płatnika. Można ręcznie zmienić.
+Wypełniany danymi z bazy (można edytować ręcznie).
 
 ### Kontakt, Email
 
-Informacje kontaktowe (imie i nazwisko + adres email), pobrane z bazy z rekordu wybranego szpitala.
+Dane z bazy (lookup z rekordu szpitala).  
+Zawsze aktualne niezależnie od daty utworzenia oferty.
 
-Pola typu "lookup", ukazują informacje w czasie rzeczywistym. Oznacza to że niezależnie od daty utworzenia oferty, te pola zawsze zawierają aktualne dane kontaktowe przypisane do tego klienta.
+### Urządzenie, Producent, Model, Nr SN, Nr INW
 
-### Urządzenie, Producent, Model, Nr SN, nr INW
+Dane dotyczące ofertowanego urządzenia.  
+Automatycznie wypełniane przy ofercie ze zlecenia.
 
-![obraz.png](/images/obraz.png)
+### Czas realizacji
 
-Informacje dotyczące ofertowanego urządzenia.
+Domyślnie „Do uzgodnienia”.
 
-W przypadku oferty ze zlecenia, wypełniane automatycznie.
+### Wysyłka / dojazd
 
-W przypadku nowej oferty przeglądu, pola "nr INW" i "Urządzenie" wypełniane tekstem "Na liście".
+Szczegółowy opis kosztów transportu i ich VAT.  
+Koszty zależą od [typu urządzeń](#pola-specyficzne).
 
-### Czas Realizacji
-
-Automatycznie wypełniane tekstem "Do uzgodnienia".
-
-W przypadku np. oczekiwania na części, można wypełnić przewidywanym czasem oczekiwania.
-
-### Wysyłka/dojazd
-
-Osobna pozycja na ofercie mówiąca o koszcie dojazdu/wysyłki.
-
-- Dojazd- koszt dojazdu serwisanta do klienta. Dojazd jest płatny dla klientów z poza powiatu Poznańskiego.  Koszt netto jest automatycznie wyliczany, z arkusza szpitali pobierana jest odległość do klienta (kilometry drogą, liczone od warsztatu Kopczyńskiego).\
-  Wartość netto = ( odległość x 1,5 x 2 ) zł.  W dojazd powinny być również wpisane koszty hotelu jeżeli taki byłby wymagany. Vat transportu jest ustalany w zależności od [typu urządzeń](sd).
-- Wysyłka/Wysyłka zwrotna- koszt jednej wysyłki do klienta. Automatyzacja ustawia koszt netto na 60zł i transport vat na 8%.
-- Wysyłka w dwie strony- koszt jednej wysyłki do klienta. Automatyzacja ustawia koszt netto na 80zł i transport vat na 8%.
-
-  <img
-    src="/images/Zrzutekranu2025-10-09112724.png"
-    alt="Zrzut ekranu 2025-10-09 112724.png"
-    title="Zrzut ekranu 2025-10-09 112724.png"
-    style={{ width:"80%" }}
-  />
-
-  <img
-    src="/images/Zrzutekranu2025-10-09113916.png"
-    alt="Zrzut ekranu 2025-10-09 113916.png"
-    title="Zrzut ekranu 2025-10-09 113916.png"
-    style={{ width:"82%" }}
-  />
+<img src="/images/Zrzutekranu2025-10-09112724.png" style={{ width:"80%" }} />
+<img src="/images/Zrzutekranu2025-10-09113916.png" style={{ width:"82%" }} />
 
 ### Uwagi template
 
-Pole gdzie z arkusza "Uwagi template" możemy wybrać ustandaryzowane uwagi które będą widoczne na dole oferty.
+Wybór standardowych uwag z arkusza *Uwagi template*.
 
-Możemy dodać nowy rekord uwagi klikając w "+". Ukaże nam się wtedy okno dodawania wpisu. W "Name" należy wpisać treść uwagi, natomiast w notes krótkie streszczenie zawartości.
-
-Możemy edytować wpisy uwag. By tego dokonać należy kliknąć w kartę uwagi któa to została już wcześniej przypisana przez nas do oferty przez przycisk "Add record".
-
-<img
-  src="/images/Zrzutekranu2025-10-09114329.png"
-  alt="Zrzut ekranu 2025-10-09 114329.png"
-  style={{ width:"60%" }}
-/>
-
-<img
-  src="/images/Zrzutekranu2025-10-09114358.png"
-  alt="Zrzut ekranu 2025-10-09 114358.png"
-  title="Zrzut ekranu 2025-10-09 114358.png"
-  style={{ width:"78%" }}
-/>
+<img src="/images/Zrzutekranu2025-10-09114329.png" style={{ width:"60%" }} />
+<img src="/images/Zrzutekranu2025-10-09114358.png" style={{ width:"78%" }} />
 
 ### Wystawiona przez
 
-W tym polu wybiera się osobę z arkusza "Serwisanci" która odpowiedzialna była za utworzenie tej oferty.
+Wybór osoby z arkusza *Serwisanci* (z uprawnieniem Admin).
 
-Wybór jest ograniczony jedynie do personelu który w polu "Permisje" posiada wartość "Admin".
-
-Imię i nazwisko będzie widoczne w mailu oraz na ofercie (razem z numerem telefonu z bazy).
-
-<img
-  src="/images/Zrzutekranu2025-10-09115244.png"
-  alt="Zrzut ekranu 2025-10-09 115244.png"
-  title="Zrzut ekranu 2025-10-09 115244.png"
-  style={{ width:"40%" }}
-/>
-
-![Zrzut ekranu 2025-10-10 115226.png](/images/Zrzutekranu2025-10-10115226.png)
+<img src="/images/Zrzutekranu2025-10-09115244.png" style={{ width:"40%" }} />
 
 <Note>
-  Wbrew mylącej nazwie, arkusz "Serwisanci" zawiera również pracowników czysto administracyjnych. Wgląd do arkuszu jest dostępny w interfejsie "Kadra".
+  Wbrew nazwie, arkusz **Serwisanci** zawiera także pracowników administracyjnych (interfejs *Kadra*).
 </Note>
 
-### Usuń ofertę (3 kropki)
+### Usuń ofertę
 
-Przycisk służy do usuwania oferty. Aktualnie po usunięciu oferty, jej numer nadal zostaje w zapisany w rekordzie. Przed usunięciem rekordu dobrze by było usunąć ten numer z pola tekstowego by uniknąć związanych z tym problemów. By edytować pole można kliknąć w rekord i wprowadzić zmiany na karcie szczegółów rekordu.
+Przycisk usuwa ofertę.  
+Przed usunięciem warto skasować numer z pola tekstowego, by uniknąć błędów.
 
 ### Wyślij mail
 
-Za pomocą rozszerzenia mailto, otwiera w domyślnej dla komputera przeglądarce/aplikacji mailowej, okno tworzenia maila. Automatycznie wypełnia tytuł, treść i adresata zgodnie z danymi w rekordzie oferty i bazie klientów. Plik pdf oferty trzeba ręcznie załączyć.
+Tworzy wiadomość w domyślnej aplikacji e-mail z tytułem i treścią pobraną z rekordu.
 
-Z uwagi na charakterystykę mailto, czasem może wyskoczyć okienko informujące o niebezpiecznym linku. Należy je zignorować.
-
-Przykładowy mail
-
-<img
-  src="/images/sd.png"
-  alt="sd.png"
-  title="sd.png"
-  style={{ width:"97%" }}
-/>
+<img src="/images/sd.png" style={{ width:"97%" }} />
 
 ### Generuj PDF oferty
 
-Zmienia status checkbox Edytuj na "TAK", jeżeli status już jest "TAK" to przycisk przyjmuje kolor biały i tekst "Oferta wygenerowana".
+Zmienia status pola `Edytuj` na „TAK”.  
+Gdy już jest „TAK”, przycisk staje się biały z napisem „Oferta wygenerowana”.
 
-### Edytuj
+### <a id="edytuj"></a> Edytuj
 
-Checkbox który przy zakliknięciu odpala [automatyzację generującą pdf](#generowanie-pdf).
+Checkbox uruchamiający [automatyzację PDF](#generowanie-pdf).  
+Po włączeniu ukrywa pola edytowalne, pokazując tylko ich odczytową wersję.
 
-Jego zakliknięcie, ukrywa również pola możliwe do edycji, w ich miejsce ukazuje te same pola lecz bez możliwości zmiany.
-
-<Frame caption="Nie wciśnięty edytuj, ciemnoszary pasek- rekord w trybie edycji">
-  <img
-    src="/images/Zrzutekranu2025-10-10120102.png"
-    alt=""
-    style={{ borderRadius:"0.5rem" }}
-    title="s"
-  />
+<Frame caption="Nie wciśnięty edytuj (tryb edycji)">
+  <img src="/images/Zrzutekranu2025-10-10120102.png" style={{ borderRadius:"0.5rem" }} />
 </Frame>
 
-<Frame caption="Wciśnięty edytuj, jasnoszary pasek- rekord nie edytowalny">
-  <img
-    src="/images/Zrzutekranu2025-10-10115825.png"
-    alt=""
-    style={{ borderRadius:"0.5rem" }}
-    title="s"
-  />
+<Frame caption="Wciśnięty edytuj (rekord nieedytowalny)">
+  <img src="/images/Zrzutekranu2025-10-10115825.png" style={{ borderRadius:"0.5rem" }} />
 </Frame>
 
-## Pola specyficzne dla typów ofert
+---
+
+## <a id="pola-specyficzne"></a> Pola specyficzne dla typów ofert
 
 <CardGroup cols={2}>
-  <Card title="Oferta serwis" icon="screwdriver-wrench" href="/Nowa%20oferta">
-    
-  </Card>
-  <Card title="Oferta przegląd" icon="passport" href="/Nowa%20oferta">
-    
-  </Card>
-  <Card title="Oferta części" icon="boxes-stacked" href="/Nowa%20oferta">
-    
-  </Card>
-  <Card title="Oferta diagnostyka" icon="gauge-low" href="/Nowa%20oferta">
-    
-  </Card>
+  <Card title="Oferta serwis" icon="screwdriver-wrench" href="/Nowa%20oferta" />
+  <Card title="Oferta przegląd" icon="passport" href="/Nowa%20oferta" />
+  <Card title="Oferta części" icon="boxes-stacked" href="/Nowa%20oferta" />
+  <Card title="Oferta diagnostyka" icon="gauge-low" href="/Nowa%20oferta" />
 </CardGroup>
 
-# Generowanie PDF
+---
 
-### Wysłanie zapytania do docs automator
+## <a id="generowanie-pdf"></a> Generowanie PDF
 
-Automatyzacja przygotowuje dane i wysyła je przez api do docs automator.
+### Wysłanie zapytania do Docs Automator
 
-Po otrzymaniu zapytania, informacje są wklejane w odpowiednim miejscu na template oferty.
+Automatyzacja wysyła dane do **DocsAutomator** przez API, wklejając je w odpowiednie pola szablonu oferty.
 
-<img
-  src="/images/Zrzutekranu2025-10-10121718.png"
-  alt="Zrzut ekranu 2025-10-10 121718.png"
-  title="Zrzut ekranu 2025-10-10 121718.png"
-  style={{ width:"65%" }}
-/>
+<img src="/images/Zrzutekranu2025-10-10121718.png" style={{ width:"65%" }} />
 
-## Wypełnianie rekordu zleceń serwisowych
+---
+
+## <a id="wypelnianie-zlecen"></a> Wypełnianie rekordu zleceń serwisowych
 
 ### Stan admin
 
-Stan admin jest ustawiany na "Oferta"
+Ustawiany na **Oferta**.
 
 ### Numer oferty
 
-Automatyzacja czyta zawartość pola "numer oferty". Jeżeli pole nie jest puste to znajduje wszystkie zapisane tam oferty i konwertuje je na wspólny wzór O-n-M-YYYY. Skrypt wykrywa różne style zapisów które to są oddzielone przecinkiem lub spacją. Usuwane są też duplikaty. Poniżej kilka przykładów konwersji numerów ofert.
-
-- O_22_3_2025 =\> O-22-3-2025
-- O112025, O12022025, O-1-1-2025 =\> O-1-1-2025, O-12-2-2025
-- O2362025 (akceptacja) O-1532-12-2025 =\> O-23-6-2025, O-1532-12-2025
-
-Dla ofert z 2025 i później, rekord zlecenia serwisowego jest łączony z ofertą za pomocą pola typu "link to". Jeżeli oferty nie ma w systemie jest ona dodawana.
+Automatyzacja konwertuje różne style numerów na jednolity wzór  
+**O-n-M-YYYY**, usuwa duplikaty i łączy zlecenia z ofertami (pole typu *link to*).
 
 <Warning>
-  Z uwagi na tą funkcję, ważne jest by usunąć numer oferty z rekordu przy usuwaniu oferty. W przeciwnym razie, zlecenie serwisowe może zostać omyłkowo podłączone do nie swojej oferty o tym samym numerze.
+  Przy usuwaniu oferty usuń również jej numer z rekordu, aby uniknąć błędnych powiązań.
 </Warning>
 
-### Realny koszt i vat
+### Realny koszt i VAT
 
-Realny koszt zostaje wypełniony wartością usługi, natomiast vat jest ustawiony w zależności od wybranej opcji "[dotyczy urządzenia](sd)".
+Wartości wypełniane automatycznie zgodnie z opcją *dotyczy urządzenia*.
 
-## Dodawanie urządzenia w przypadku oferty naprawy
+---
 
-Do bazy urządzeń dodawany jest rekord wypełniony danymi z oferty.
+## <a id="dodawanie-urzadzenia"></a> Dodawanie urządzenia przy ofercie naprawy
 
-## Wysyłanie danych do memento
+W przypadku oferty naprawy, do bazy urządzeń dodawany jest nowy rekord z danymi oferty.
 
-Gdy wystąpią zmiany w polach numer oferty, stan, stan admin, rekord jest oznaczany jako czekający na [synchroniację](s). W zależności od długości kolejki, rekord zostanie wysłany do memento. Czas oczekiwania powinien trwać 1-3min w przypadku pojedyńczych rekordów w kolejce.
+---
+
+## <a id="wysylanie-memento"></a> Wysyłanie danych do Memento
+
+Zmiany w polach *numer oferty*, *stan*, *stan admin* oznaczają rekord jako **oczekujący na synchronizację**.  
+Rekord zostanie wysłany do Memento po kilku minutach (1–3 minuty w przypadku pojedynczych rekordów).
+
+---
