Documentation edits made through Mintlify web editor

--- a/Nowa oferta.mdx
+++ b/Nowa oferta.mdx
@@ -14,22 +14,6 @@ title: "Nowa oferta"
 
 ---
 
-## Spis treści
-
-1. [Opis interfejsu](#opis-interfejsu)
-2. [Lista rekordów](#lista-rekordow)
-   - [Właściwości listy](#wlasciwosci-listy)
-   - [Podsumowanie rekordu](#podsumowanie-rekordu)
-3. [Dodawanie nowej oferty](#dodawanie-nowej-oferty)
-4. [Edycja nowej oferty – wspólne pola](#edycja-nowej-oferty)
-5. [Pola specyficzne dla typów ofert](#pola-specyficzne)
-6. [Generowanie PDF](#generowanie-pdf)
-7. [Wypełnianie rekordu zleceń serwisowych](#wypelnianie-zlecen)
-8. [Dodawanie urządzenia przy ofercie naprawy](#dodawanie-urzadzenia)
-9. [Wysyłanie danych do Memento](#wysylanie-memento)
-
----
-
 ## Opis interfejsu
 
 To jest interfejs typu **Record review**.\
@@ -278,7 +262,6 @@ Przycisk dopiero staje się widoczny gdy
 
 Jeżeli warunki są nie spełnione, to w jego miejscu widnieje przycisk "DOKOŃCZ OFERTĘ"
 
-
 ### Edytuj
 
 - Status "NIE"
@@ -353,7 +336,7 @@ Automatyzacja konwertuje różne style numerów na jednolity wzór\
 **O-n-M-YYYY**, usuwa duplikaty i łączy zlecenia z ofertami (pole typu _link to_).
 
 <Warning>
-  Przy usuwaniu oferty usuń również jej numer z rekordu, aby uniknąć błędnych powiązań.
+  Przy usuwaniu oferty, usuń również formę tekstową jej numeru z rekordu. To pozwoli uniknąć błędnych powiązań wpisów.
 </Warning>
 
 ### Realny koszt i VAT
