--- a/Oferta ze zlecenia.mdx
+++ b/Oferta ze zlecenia.mdx
@@ -122,6 +122,14 @@ Oferta powstała ze zlecenia automatycznie wypełnia część pól:
 - **Numer sprawy** = numer zlecenia
 - Pola: _Nr. Zgłoszenia Klienta_, _SN_, _INW_, _Nazwa_, _Model_, _Producent_, _Szpital_, _Płatnik_, _Oddział_, _Magazyn przepływy_ → pobierane z rekordu
 - **Typ** → „Serwis”
+- **Uwagi wew.** → Informacje mające na celu ułatwienie wypełnienia oferty, dane z pól: usterka, naprawa, szacowany koszt, rzeczywisty czas naprawy, ocena.
+
+<img
+  src="/images/Zrzutekranu2025-10-13113521.png"
+  alt="Zrzut ekranu 2025-10-13 113521.png"
+  title="Zrzut ekranu 2025-10-13 113521.png"
+  style={{ width:"61%" }}
+/>
 
 ---
 
