--- a/interfejsy/oferty/oferta-ze-zlecenia.mdx
+++ b/interfejsy/oferty/oferta-ze-zlecenia.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Oferta ze zlecenia"
+icon: 'screwdriver-wrench'
 ---
 
 <Frame>
@@ -50,7 +51,7 @@ Domyślnie ustawione filtrowanie wyszukuje rekordy **zleceń serwisowych**, któ
       ustaw `Data is after` (początek) oraz `Data is before` (koniec).
     - Znając formatowanie nazw klientów, możemy wyszukiwać szpitale po mieście:\
       wybierz `Szpital/Klient contains` (nazwa miasta).\
-      Np. wpisując _Poznań_, zobaczymy rekordy z Wrzoska, Przybyszewskiego, Grunwaldzkiej itd.
+      Np. wpisując "Poznań", zobaczymy rekordy z Wrzoska, Przybyszewskiego, Grunwaldzkiej itd.
   </Accordion>
 </AccordionGroup>
 
@@ -144,6 +145,6 @@ Po zakończeniu generowania oferty:
 
 <CardGroup cols={1}>
   <Card title="Edycja utworzonej oferty" icon="pen-to-square" href="/Nowa%20oferta">
-    
+    // @ts-ignore
   </Card>
 </CardGroup>
